# mlops

./: README.md  Untitled.ipynb  pyproject.toml
01-intro/: Untitled.ipynb
mlruns/0/: meta.yaml
