[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "mlflow>=3.1.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "parquet>=1.3.1",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
]
